update db [astrology]

--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -81,7 +81,7 @@ confederate ,/adj./@同盟的;,/n./@同盟;,/n./@同盟國;,/n./@同盟者;,/vt.
 confinement ,/n./@限制;,/n./@監禁;,/n./@分娩;
 confounding ,/adj./@令人困惑的;
 conjugation ,/n./@詞形變化;
-conjunction ,/n./@结合;
+conjunction ,/n./@结合;,/n./@聯合;,/n./@連接;,/n./@同時發生;,/n./@連詞;,/n./@連接詞;,/n./[astrology]@相合;
 conjuration ,/n./@魔術;,/n./用魔法@召喚;,/n./@魔法;,/n./@施法;,/n./@咒語;,/n./@咒文;,/n./@符咒;,/n./@魔咒;
 connotation ,/n./@暗示;,/n./@含義;
 consecutive ,/adj./@连贯的;,/adj./@连续的;
