--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -363,7 +363,7 @@ culprit ,/n./@罪犯;,/n./@犯错的人;,/n./@肇事者;,/n./@问题的根源;
 culture ,/n./@文化;
 curious ,/adj./@好奇的;
 current ,/adj./@當今;
-curtail ,/n./@削減;,/n./@剝奪;
+curtail ,/vt./@縮減;,/vt./@削減;,/vt./@限制;,/vt./@縮短;,/vt./@制止;,/vt./@減少;,/vt./@省略;,/vt./@剝奪;,/vt./@褫奪;
 curtain ,/n./@窗簾;,/n./@幕布;
 cushion ,/n./@墊子;,/n./@靠墊;,/n./@減震墊;,/n./@緩衝物;,/vt./@緩衝;
 custody ,/v./@保管;,/v./@監護;,/n./@监禁;,/n./@拘留;
@@ -939,6 +939,7 @@ orifice ,/n./@孔;,/n./@口;,/n./@洞;
 origami ,/n./@日本摺紙藝術;
 osmotic ,/adj./@渗透的;
 ossuary ,/n./@藏屍堂;
+outcast ,/n./@被逐出的人;,/n./@被拋棄的人;,/adj./@被拋棄的;,/adj./@被逐出的;
 outcome ,/n./@結果;
 outdoor ,/adj./@室外的;,/adj./@野外的;,/adj./@露天的;
 outland ,/n./@邊境地區;,/n./@邊遠地區;,/n./@外國;
