--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -96,6 +96,8 @@ assertive ,/adj./@自信的;
 assistant ,/n./@助手;,/adj./@辅助的;
 associate ,/v./@联系;
 assurance ,/n./@保证;,/n./@确信;
+astrology ,/n./@占星術;,/n./@占星學;
+astronomy ,/n./@天文學;
 attention ,/n./@注意;
 attentive ,/adj./@注意的;,/adj./@留意的;
 attribute ,/n./@属性;,/n./@特质;
@@ -733,7 +735,8 @@ orchestra ,/n./@管弦樂隊;,/n./@交響樂;
 originate ,/v./@创始;,/vt./@發明;,/vt./@引發;,/vt./@創作;
 orphanage ,/n./@孤兒院;
 oscillate ,/v./@震盪;,/v./@擺動;,/v./@振盪;,/v./@搖擺;
-ostracize ,/v./@排斥;,/v./@排擠;,/v./@孤立;
+ostracise ,/redirected./@target="ostracize";
+ostracize ,/v./@排斥;,/v./@排擠;,/v./@孤立;,/vt./@放逐;
 otherwise ,/conj.//adv./@否則;,/adv./@另外;,/adj./@另外的;
 outermost ,/adj./@最外的;
 outskirts ,/n./@市郊;,/n./@边缘;,/n./@郊区;
