--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -96,6 +96,8 @@ assertive
 assistant
 associate
 assurance
+astrology
+astronomy
 attention
 attentive
 attribute
@@ -733,6 +735,7 @@ orchestra
 originate
 orphanage
 oscillate
+ostracise
 ostracize
 otherwise
 outermost
