--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -215,6 +215,7 @@ convulsion ,/n./@抽搐;,/n./@驚厥;,/n./@痉挛;,/n./@狂笑;,/n./@動亂;
 coordinate ,/v./@协调;,/v./@配合;,/n./@坐标;,/adj./@并列的;,/adj./@同等的;
 copulative ,/adj./@連繫的;,/adj./@連繫詞的;,/n./@連繫詞;,/adj./@交媾的;
 cornucopia ,/n./@大量;
+coronation ,/n./@加冕典禮;,/n./@加冕;
 correspond ,/v./@相符合;
 corruption ,/n./@腐败;
 cosmopolis ,/n./@國際都市;
