--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -226,6 +226,7 @@ cross-talk ,/n./@相声;
 crustacean ,/n./@甲殼綱動物;,/adj./@甲殼綱的;
 curriculum ,/n./@課程;
 deactivate ,/v./@停用;,/v./@遣散;
+debauchery ,/n./@縱情酒色;,/n./@放蕩;,/n./@沉湎酒色;,/n./@道德敗壞;,/n./@淫蕩;,/n./@骄奢淫逸;
 decapitate ,/vt./@斬首;
 decelerate ,/v./@减速;
 declension ,/n./@詞形變化;
@@ -408,6 +409,7 @@ indictment ,/n./@控告;,/n./@起訴;,/n./@状告;,/n./@罪证;
 indigenous ,/adj./@土著的;,/adj./@本地的;,/adj./@当地的;
 individual ,/n./@个人;,/adj./@个人的;,/adj./@各自的;
 inducement ,/n./@誘導;,/n./@動機;
+indulgence ,/n./@沉溺;,/n./@放縱;,/n./@縱容;,/n./@嗜好;,/n./@寬容;,/n./@遷就;
 industrial ,/adj./@工业的;
 inequality ,/n./@不平等;
 inevitable ,/adj./@必然的;,/adj./@不可避免的;
@@ -511,6 +513,7 @@ mutability ,/n./@易變性;
 mutilation ,/n./@伤害;,/n./@截除;,/n./@损坏;,/n./@损伤;
 myocardial ,/adj./@心肌的;
 mysterious ,/adj./@神秘的;
+narcissism ,/n./@自我陶醉;,/n./@孤芳自賞;,/n./@自戀;
 narcissist ,/n./@自我陶醉者;,/n./@孤芳自赏者;,/n./@自戀者;
 navigation ,/n./@航行;,/n./@航海;
 neutralize ,/v./@中和;,/v./@抵消;
