--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -147,6 +147,7 @@ intelligible ,/adj./@可理解的;,/adj./@明瞭的;,/adj./@清晰易懂的;,/ad
 intermediary ,/n./@调解人;
 intermediate ,/adj./@中间的;
 intermission ,/n./@幕間休息;,/n./@暫停;,/n./@中斷;
+intermittent ,/adj./@間歇的;,/adj./@時斷時續的;,/adj./@斷斷續續的;,/adj./@一陣陣的;
 interpretive ,/redirected./@target="interpretative";
 intersection ,/n./@交集;,/n./@交点;,/n./@十字路口;,/n./@相交;,/n./@交叉;,/n./@交叉點;,/n./@道路交叉口;
 interstellar ,/adj./@星際的;
