--- a/Files/lang/ch/chinese3.csv
+++ b/Files/lang/ch/chinese3.csv
@@ -57,6 +57,7 @@ cap ,/n./@帽子;,/n./@盖@子;
 car ,/n./@汽車;
 cat ,/n./@貓;
 CIA ,/n.//abbr./@中情局;
+cog ,/n./@輪齒;,/n./@嵌齒;,/n./@齒輪;
 com ,/redirected./@target="com-";
 con ,/adj./@否@定;,/adj./@否@...的;,/adj./@反@...的;
 cop ,/n./@警察;
