--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -298,7 +298,7 @@ crane ,/v./@伸長;
 crank ,/n./@曲柄;,/n./@怪人;,/vi./@轉動曲柄;,/vt./@用曲柄轉動;
 crash ,/v./@碰撞;,/v./@墜毀;
 crate ,/n./@筐;,/n./@簍;,/n./@箱;,/n./@分隔箱;
-crave ,/v./@渴望;,/v./@懇求;
+crave ,/v./@渴望;,/v./@懇求;,/vt./@渴望獲得;,/vt./@渴望得到;,/vt./@迫切需要;
 crawl ,/v./@爬;,/vi./@爬行;
 crazy ,/adj./@瘋狂的;
 creak ,/v./@咯吱咯吱響;,/n./@咯吱咯吱聲;
