--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -251,6 +251,7 @@ carnal ,/adj./@肉體的;,/adj./@肉慾的;,/adj./@淫蕩的;,/adj./@性慾的;
 carpet ,/n./@地毯;
 carrot ,/n./@胡蘿蔔;
 carton ,/n./@紙箱;
+casino ,/n./@賭場;
 casket ,/n./@小箱;,/n./@小盒;,/n./@骨灰盒;,/n./@棺材;
 castle ,/n./@城堡;
 casual ,/adj./@隨便的;,/adj./@偶然的;,/adj./@随意的;,/adj./@粗略的;,/adj./@漫不经心的;,/adj./@轻松的;,/n./@临时工;,/adj./@临时的;
@@ -357,7 +358,7 @@ cravat ,/n./@領帶;,/n./@領巾;
 create ,/v./@創造;
 credit ,/n./@信用;,/v./@歸功于;,/v./@相信;
 creepy ,/adj./@令人毛骨悚然的;
-cringe ,/v./@畏縮;,/v./@奉承;,/v./@阿諛;
+cringe ,/v./@畏縮;,/v./@奉承;,/v./@阿諛;,/n./@奉承;,/n./@畏缩;,/n./@退缩;,/adj./@令人難堪的;,/adj./@令人尷尬的;
 crises ,/n./@危機;
 crisis ,/n./@危機;
 crotch ,/n./@胯部;,/n./@分叉;
@@ -920,7 +921,7 @@ molten ,/adj./@熔化的;
 moment ,/n./@時刻;
 Monday ,/n./@星期一;
 monkey ,/n./@猴子;
-morale ,/n./@士氣;,/n./@斗志;
+morale ,/n./@士氣;,/n./@斗志;,/n./@精神面貌;
 morbid ,/adj./@病態的;,/adj./@消極的;,/adj./@恐怖的;
 morgue ,/n./@陳屍所;,/n./@停尸房;,/n./@太平间;,/n./@資料室;
 morose ,/adj./@鬱悶的;,/adj./@孤僻的;,/adj./@陰鬱的;,/adj./@陰沉的;
@@ -996,6 +997,7 @@ office ,/n./@辦公室;
 online ,/adj./@在綫;
 opaque ,/adj./@不透明的;,/adj./@不透光的;,/adj./@難理解的;,/n./@不透明體;
 opiate ,/adj./@含鴉片的;,/adj./@麻醉的;,/n./@麻醉劑;
+opioid ,/n./@類鴉片藥物;,/n./@類鴉片藥品;
 oppose ,/v./@反對;
 option ,/n./@選項;
 oracle ,/n./@神諭;
@@ -1192,7 +1194,7 @@ reject ,/v./@拒絕;
 relate ,/v./@相关;
 relent ,/v./@變溫和;
 relief ,/n./@放松;
-relish ,/n./@滋味;,/n./@風味;,/n./@品味;,/n./@食慾;
+relish ,/n./@滋味;,/n./@風味;,/n./@品味;,/n./@食慾;,/vt./@喜愛;,/vt./@享受;,/vt./@欣賞;,/vt./@期盼;,/vt./@憧憬;,/vt./@盼望;
 reload ,/v./@重新加載;
 remain ,/v./@剩余;
 remark ,/v./@話語;
@@ -1630,6 +1632,7 @@ vulgar ,/adj./@粗俗的;,/n./@平民;,/adj./@粗魯的;,/adj./@通俗的;,/adj.
 waffle ,/n./@華夫;,/v./@胡扯;,/v./@閒聊;
 waiter ,/n./@侍者;,/n./@服務員;
 wallet ,/n./@錢包;
+wallow ,/vi./@沉迷;,/vi./@沈湎;,/vi./@打滾;,/vi./@顛簸;
 wander ,/vi./@游荡;,/vi./@闲逛;,/vt./@游荡;,/n./@闲逛;,/vi./@漫步;,/vi./@游离;,/vi./@走神;,/vi./@离题;,/vi./@走散;,/vi./@蜿蜒;,/vi./@乱摸;
 warden ,/n./@管理員;,/n./@主管;,/n./@長官;
 wasn't ,/v./@不是;
