--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -573,6 +573,7 @@ fertile ,/adj./@肥沃的;,/adj./@富饒的;
 fervent ,/adj./@强烈的;,/adj./@热烈的;
 fervour ,/n./@热忱;
 fiction ,/n./@虛構;,/adj./@虛構的;,/adj./@捏造的;
+fidgety ,/adj./@坐立不安的;,/adj./@焦躁的;,/adj./@煩躁的;,/adj./@焦躁不安的;,/adj./@不自在的;,/adj./@心神不安的;,/adj./@煩躁不安的;
 fifteen ,/adj./@十五;
 figment ,/n./@臆造的事物;
 filling ,/n./@填充;,/n./@餡料;
@@ -725,7 +726,7 @@ impulse ,/n./@衝動;,/n./@脈衝;,/n./@推動力;
 incisor ,/n./@門牙;,/n./@前齒;
 incline ,/v./@贊同;,/v./@傾斜;
 include ,/v./@包括;
-indulge ,/v./@縱容;,/v./@放任;
+indulge ,/v./@縱容;,/v./@放任;,/v./@放縱;,/vi./@沉迷;,/vi./@沉溺;
 inertia ,/n./@慣性;,/n./@惰性;,/n./@不活動;
 inferno ,/n./@地獄;,/n./@陰間;
 inflict ,/vt./@強加;,/vt./@給予@打擊;,/vt./@使@遭受;
@@ -816,6 +817,7 @@ lottery ,/n./@彩票;,/n./@抽彩;,/n./@抓阄;
 lowborn ,/adj./@出身微賤的;
 loyalty ,/n./@忠誠;
 lucency ,/n./@透明;,/n./@光亮;
+Luddite ,/n./@盧德分子;,/n./@強烈反對機械化或自動化的人;,/n./@反對改進工作方法的人;,/n./@反對使用新機器的人;,/n./@强烈抵制技术革新的人;,/n./@反对技术革新的人;
 lumiere ,/n./@盧米埃爾;
 lunatic ,/adj./@瘋狂的;
 macaque ,/n./@獼猴;
@@ -1235,6 +1237,7 @@ serfdom ,/n./@農奴身分;,/n./@奴隸身分;
 serious ,/adj./@嚴肅的;
 servant ,/n./@僕人;
 service ,/n./@服務;
+servile ,/adj./@卑躬屈膝的;,/adj./@卑賤的;,/adj./@卑躬的;,/adj./@低下的;,/adj./@谄媚的;,/adj./@奴隸的;,/adj./@奴性的;
 session ,/n./@會議;
 several ,/adj./@幾個;,/adj./@數個;
 shabbat ,/n./@安息日;
@@ -1457,6 +1460,7 @@ utilize ,/v./@使用;,/vt./@利用;
 utopian ,/adj./@烏托邦的;,/adj./@空想的;
 vacancy ,/n./@空缺;,/n./@空位;,/n./@空白;,/n./@空虛;
 vaccine ,/n./@疫苗;
+vacuous ,/adj./@空的;,/adj./@空洞的;,/adj./@空虛的;,/adj./@無知的;,/adj./@無意義的;,/adj./@茫然的;,/adj./@無內容的;,/adj./@無思想的;
 vaginal ,/adj./@阴道的;,/adj./@葉鞘的;
 vagrant ,/adj./@流浪的;,/adj./@漂泊的;
 valence ,/n./@價;,/n./@原子價;,/n./@化合價;,/n./@掛布;,/n./@帷幔;,/n./@窗簾短幔;
