--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -187,7 +187,9 @@ Carthage ,/n./@迦太基;
 cashmere ,/n./@羊絨;
 casually ,/adj./@随便的;
 casualty ,/n./@傷亡;,/n./@伤亡人员;,/n./@受害者;,/n./@急诊室;
+catalyse ,/redirected./@target="catalyze";
 catalyst ,/n./@催化剂;,/n./@触媒;,/n./@接触剂;,/n./@催化剂触媒;
+catalyze ,/vt./@催化;,/vt./@催動;,/vt./@刺激;,/vt./@促發;,/vt./@促進;
 category ,/n./@种类;
 catheter ,/n./@導尿管;,/n./@導管;
 catholic ,/adj./@天主教的;
@@ -374,7 +376,7 @@ disgrace ,/n./@耻辱;
 disguise ,/v.//n./@掩饰;,/v.//n./@伪装;
 dishevel ,/v./@弄亂;
 dismount ,/v./@下;,/vt./@卸下;
-disorder ,/n./@混乱;
+disorder ,/n./@混乱;,/n./@無秩序;,/n./@騷亂;,/n./@動亂;,/n./@紊亂;,/n./@失調;
 dispatch ,/v./@派遣;,/v./@分派;,/n./@派遣;,/n./@急件;,/n./@杀死;,/vt./@杀死;,/vt./@发送;
 dispense ,/v./@分配;,/v./@免除;,/v./@豁免;
 disperse ,/v./@分散;,/v./@散開;,/vt./@驅散;,/vt./@解散;,/vt./@疏散;,/vt./@散播;,/vi./@消散;
