--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -258,6 +258,7 @@ copyright ,/n./@版权;
 corporate ,/n./@法人的;
 corporeal ,/adj./@物质的;
 correlate ,/v./@关联;
+corrosive ,/adj./@腐蝕的;,/adj./@腐蝕性的;,/n./@腐蝕物;,/n./@腐蝕劑;
 cosmology ,/n./@宇宙学;
 courteous ,/adj./@有禮貌的;
 craftsman ,/n./@工匠;,/n./@技工;,/n./@工藝師;
@@ -688,6 +689,7 @@ meteorite ,/n./@隕石;
 methodism ,/n./@衛理宗教義;,/n./@循道宗教義;
 methodist ,/n./@衛理公會教徒;,/n./@循道宗教徒;
 metrology ,/n./@度量衡學;,/n./@計量學;
+microcosm ,/n./@縮影;,/n./@微觀世界;,/n./@小宇宙;,/n./@微縮宇宙;
 microwave ,/n./@微波;
 migratory ,/adj./@遷徙的;,/adj./@遷移的;,/adj./@遷居的;,/adj./@洄游的;,/adj./@遊走性的;
 millennia ,/redirected./@target="millennium";
@@ -1103,7 +1105,7 @@ voiceless ,/adj./@無聲的;
 volunteer ,/n./@志愿者;
 vouchsafe ,/vt./@给予;,/vt./@惠赐;,/vt./@承诺;,/vt./@透露;
 vulgarian ,/n./@俗人;
-vulgarity ,/n./@粗俗;,/n./@粗俗语;,/n./@粗野动作;
+vulgarity ,/n./@粗俗;,/n./@粗俗语;,/n./@粗野动作;,/n./@庸俗;,/n./@不雅;
 warranted ,/adj./@擔保的;
 wasteland ,/n./@废土;
 waterfall ,/n./@瀑布;
