--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -226,6 +226,7 @@ cross-talk
 crustacean
 curriculum
 deactivate
+debauchery
 decapitate
 decelerate
 declension
@@ -408,6 +409,7 @@ indictment
 indigenous
 individual
 inducement
+indulgence
 industrial
 inequality
 inevitable
@@ -511,6 +513,7 @@ mutability
 mutilation
 myocardial
 mysterious
+narcissism
 narcissist
 navigation
 neutralize
