--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -251,6 +251,7 @@ carnal
 carpet
 carrot
 carton
+casino
 casket
 castle
 casual
@@ -996,6 +997,7 @@ office
 online
 opaque
 opiate
+opioid
 oppose
 option
 oracle
@@ -1630,6 +1632,7 @@ vulgar
 waffle
 waiter
 wallet
+wallow
 wander
 warden
 wasn't
