--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -573,6 +573,7 @@ fertile
 fervent
 fervour
 fiction
+fidgety
 fifteen
 figment
 filling
@@ -816,6 +817,7 @@ lottery
 lowborn
 loyalty
 lucency
+Luddite
 lumiere
 lunatic
 macaque
@@ -1235,6 +1237,7 @@ serfdom
 serious
 servant
 service
+servile
 session
 several
 shabbat
@@ -1457,6 +1460,7 @@ utilize
 utopian
 vacancy
 vaccine
+vacuous
 vaginal
 vagrant
 valence
