--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -258,6 +258,7 @@ copyright
 corporate
 corporeal
 correlate
+corrosive
 cosmology
 courteous
 craftsman
@@ -688,6 +689,7 @@ meteorite
 methodism
 methodist
 metrology
+microcosm
 microwave
 migratory
 millennia
