--- a/Files/lang/ch/chinese14.csv
+++ b/Files/lang/ch/chinese14.csv
@@ -9,6 +9,7 @@ classification ,/n./@分类;
 claustrophobia ,/n./@幽閉恐懼症;,/n./@幽閉恐怖症;
 congratulation ,/n./@祝贺;
 craniocerebral ,/adj./@顱腦的;
+demoralization ,/n./@士氣低落;,/n./@意志消沉;,/n./@道德敗壞;,/n./@墮落;,/n./@士氣渙散;
 detoxification ,/n./@解毒;,/n./@戒毒;,/n./@解毒作用;,/n./@去毒;
 disappointedly ,/adv./@失望的;
 discrimination ,/n./@歧視;,/n./@辨別;,/n./@區別;
