--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -353,6 +353,7 @@ functional ,/adj./@实用的;,/adj./@功能的;
 futuristic ,/adj./@未來派的;,/adj./@超前新奇的;,/adj./@极其新潮的;
 gargantuan ,/adj./@巨大的;,/adj./@龐大的;
 generation ,/n./@一代;
+generosity ,/n./@慷慨;,/n./@寬宏大量;,/n./@大方;
 geneticist ,/n./@遺傳學家;
 girlfriend ,/n./@女朋友;
 glamourous ,/adj./@迷人的;,/adj./@有魅力的;
