--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -32,6 +32,7 @@ assassinate ,/v./@刺殺;,/v./@暗殺;
 association ,/n./@协会;
 attribution ,/n./@归因;,/n./@属性;
 avoirdupois ,/n./@常衡;
+awkwardness ,/n./@笨拙;,/n./@別扭;,/n./@尴尬;,/n./@爲難;,/n./@難為情;,/n./@難堪;,/n./@棘手;
 bellybutton ,/n./@肚脐;
 benediction ,/n./@祝福;
 biometrical ,/redirected./@target="biometric";
@@ -160,6 +161,7 @@ examination ,/n./@考试;,/n./@测验;
 exceedingly ,/adv./@极其;,/adv./@非常;
 exceptional ,/adj./@例外的;
 exclamation ,/n./@感嘆;,/n./@呼喊;
+existential ,/adj./@存在主義的;,/adj./@關乎存在的;,/adj./@關乎生存的;,/adj./@存在的;
 exorbitance ,/n./@過高;,/n./@過分;,/n./@過度;
 expectation ,/n./@期待;,/n./@预期;,/n./@指望;
 expectorate ,/v./@咳;,/v./@吐;,/v./@咯血;,/v./@咯;
