--- a/Files/lang/ch/chinese13.csv
+++ b/Files/lang/ch/chinese13.csv
@@ -52,6 +52,7 @@ discretionary ,/adj./@任意的;,/adj./@自由决定的;
 disfiguration ,/n./@毁容;,/n./@畸形;
 distinguished ,/n./@卓越的;
 documentation ,/n./@文档;,/n./@文献;,/n./@文件;,/n./@资料;
+embarrassment ,/n./@難堪;,/n./@尷尬;,/n./@窘迫;,/n./@爲難人的事;,/n./@拮据;,/n./@窘困;
 entertainment ,/n./@娱乐;
 environmental ,/adj./@環境的;,/adj./@周圍的;
 establishment ,/n./@确立;,/n./@制定;
