--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -254,6 +254,7 @@ duck ,/n./@鴨;,/n./@鴨肉;
 duct ,/n./@导管;,/n./@管道;,/n./@输送管;
 dude ,/n./@花花公子;
 duel ,/v./@決斗;
+duet ,/n./@二重唱;,/n./@二重奏;
 duke ,/n./@公爵;
 dull ,/adj./@愚鈍的;
 dumb ,/adj./@啞的;,/adj./@傻的;
@@ -662,6 +663,7 @@ move ,/v./@動;
 much ,/adv./@很;
 muck ,/n./@淤泥;,/v./@弄脏;
 mule ,/n./@骡子;,/n./@拖鞋;,/n./@固执的人;
+murk ,/n./@黑暗;,/n./@陰鬱;,/adj./@黑暗的;,/adj./@陰鬱的;,/adj./@陰暗的;
 muse ,/v./@沉思;,/v./@默想;
 musk ,/n./@麝香;
 must ,/aux./@必須;
@@ -943,7 +945,7 @@ slut ,/n./@母狗;,/n./@蕩婦;
 smog ,/n./@煙霧;
 smug ,/adj./@自鳴得意的;
 snap ,/adj./@突然的;,/vt./@猛咬;,/vt./@折斷;,/n./@猛咬;,/n./@突然折斷;,/n./@噼啪聲;
-snob ,/n./@勢利眼;,/n./@勢利小人;
+snob ,/n./@勢利眼;,/n./@勢利小人;,/n./@勢利鬼;
 snog ,/v./@親吻;,/v./@愛撫;
 snot ,/n./@鼻涕;
 snow ,/n./@雪;
@@ -987,6 +989,7 @@ sulk ,/v./@生氣;,/n./@生氣;
 sure ,/adj./@當然;
 surf ,/v./@衝浪;
 swab ,/n./@紗布;,/n./@藥簽;,/n./@醫用海綿;,/n./@拖把;,/n./@擦帚;,/v./@打掃;,/v./@擦拭;,/v./@塗抹;
+swag ,/v./@搖擺;,/v./@下垂;,/n./@贓物;,/n./@個人魅力;,/n./@個性風格;
 swan ,/n./@天鵝;
 swap ,/v./@交換;
 swig ,/n./@痛飲;,/n./@大喝;,/n./@牛飲;,/v./@痛飲;,/v./@大喝;,/v./@牛飲;
@@ -1108,7 +1111,7 @@ wake ,/v./@醒;,/v./@醒來;
 walk ,/v./@走;
 wall ,/n./@墻;
 wand ,/n./@魔杖;,/n./@棒;
-wank ,/v./@手婬;
+wank ,/v./@手婬;,/n./@手淫;
 want ,/v./@希望;
 ward ,/n./@病房;,/v./@保衛;,/v./@避開;
 ware ,/n./@陶器;
