--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -564,6 +564,7 @@ greed ,/n./@貪婪;,/n./@貪心;
 green ,/n./@綠色;,/adj./@綠色的;
 grief ,/n./@悲哀;
 grill ,/v./@燒;,/v./@烤;,/v./@拷問;,/n./@烤架;,/n./@烤肉;
+grime ,/n./@汙垢;,/n./@汙點;,/n./@汙穢;,/n./@塵垢;
 grind ,/v./@碾碎;,/v./@磨碎;,/n./@苦差;,/n./@研磨;,/vt./@压迫;
 gripe ,/n./@腹痛;,/n./@腸絞痛;,/n./@不滿;,/n./@牢騷;,/n./@抱怨;,/vi./@腹痛;,/vi./@腸絞痛;,/vt./@握緊;,/vt./@抓牢;,/vi./@訴苦;,/vi./@抱怨;,/vi./@發牢騷;
 groan ,/v./@呻吟;
