--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -358,7 +358,7 @@ cravat ,/n./@領帶;,/n./@領巾;
 create ,/v./@創造;
 credit ,/n./@信用;,/v./@歸功于;,/v./@相信;
 creepy ,/adj./@令人毛骨悚然的;
-cringe ,/v./@畏縮;,/v./@奉承;,/v./@阿諛;,/n./@奉承;,/n./@畏缩;,/n./@退缩;,/adj./@令人難堪的;,/adj./@令人尷尬的;
+cringe ,/v./@畏縮;,/v./@奉承;,/v./@阿諛奉承;,/vi./@卑躬屈膝;,/vi./@感到難堪;,/vi./@感到尷尬;,/n./@奉承;,/n./@畏缩;,/n./@退缩;,/adj./@令人難堪的;,/adj./@令人尷尬的;
 crises ,/n./@危機;
 crisis ,/n./@危機;
 crotch ,/n./@胯部;,/n./@分叉;
@@ -1139,7 +1139,7 @@ quench ,/v./@熄滅;
 quiver ,/v./@顫抖;
 quorum ,/n./@法定人數;
 rabbit ,/n./@兔子;
-racket ,/n./@喧鬧;
+racket ,/n./@喧鬧;,/n./@喧嚷;,/n./@非法勾當;,/n./@騙局;,/n./@詐騙;,/n./@敲詐;,/n./@球拍;
 radial ,/adj./@放射的;,/adj./@輻射的;
 radius ,/n./@半徑;
 raffle ,/v./@抽彩售貨;
