--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -25,6 +25,7 @@ adjourn ,/v./@延期;,/vt./@中止;,/vt./@休會;,/vt./@休庭;
 adjunct ,/n./@附屬物;
 adulate ,/v./@諂媚;
 advance ,/v./@发展;,/v./@前進;,/v./@提前;
+adverse ,/adj./@逆向的;,/adj./@相反的;,/adj./@不利的;,/adj./@反對的;,/adj./@敵對的;,/adj./@反面的;,/adj./@有害的;,/adj./@逆的;
 aerobic ,/adj./@需氧的;,/adj./@有氧的;
 affable ,/adj./@和藹的;
 afflict ,/v./@折磨;
@@ -323,7 +324,7 @@ content ,/adj./@滿足的;,/n./@含量;,/n./@内容;
 contest ,/n./@競爭;,/n./@爭辯;,/n./@竞赛;,/n./@比赛;
 context ,/n./@背景;
 contort ,/v./@扭曲;
-contour ,/n./@輪廓;,/n./@等高綫;,/n./@周綫;,/n./@概要;
+contour ,/n./@輪廓;,/n./@等高綫;,/n./@周綫;,/n./@概要;,/n./@外形;,/n./@形體;
 control ,/v./@控制;
 convene ,/vi./@召开;,/vt./@召开;
 convent ,/n./@女修道院;
