--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -543,7 +543,7 @@ Galician ,/n./@加利西亞語;,/adj./@加利西亞的;,/n./@加利西亞人;,/a
 garrison ,/n./@要塞;,/v./@駐防;,/v./@守衛;,/n./@卫戍部队;
 gauntlet ,/n./@长手套;,/n./@金属护手;
 generate ,/v./@产生;,/v./@發生;,/v./@生成;,/v./@生殖;
-generous ,/adj./@慷慨的;
+generous ,/adj./@慷慨的;,/adj./@大方的;,/adj./@寬宏大量的;,/adj./@寬厚的;,/adj./@大量的;,/adj./@豐富的;,/adj./@豐盛的;,/adj./@豐厚的;
 genitive ,/adj./@所有格的;,/n./@所有格;,/adj./@屬格的;,/n./@屬格;
 genocide ,/n./@種族滅絕;,/n./@種族屠殺;
 geometry ,/n./@幾何學;
