--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -22,6 +22,7 @@ advantage ,/n./@优点;
 adventure ,/n./@冒险;
 adverbial ,/n./@狀語;,/adj./@副詞的;
 adversary ,/n./@敵手;
+adversity ,/n./@逆境;,/n./@窘境;,/n./@困境;,/n./@厄運;,/n./@不幸;,/n./@困難;
 advertise ,/v./@做广告;
 aeroplane ,/n./@飛機;
 aesthetic ,/adj./@美学的;,/adj./@審美的;
