--- a/Files/lang/en/english11.csv
+++ b/Files/lang/en/english11.csv
@@ -32,6 +32,7 @@ assassinate
 association
 attribution
 avoirdupois
+awkwardness
 bellybutton
 benediction
 biometrical
@@ -160,6 +161,7 @@ examination
 exceedingly
 exceptional
 exclamation
+existential
 exorbitance
 expectation
 expectorate
