--- a/Files/lang/en/english4.csv
+++ b/Files/lang/en/english4.csv
@@ -254,6 +254,7 @@ duck
 duct
 dude
 duel
+duet
 duke
 dull
 dumb
@@ -662,6 +663,7 @@ move
 much
 muck
 mule
+murk
 muse
 musk
 must
@@ -987,6 +989,7 @@ sulk
 sure
 surf
 swab
+swag
 swan
 swap
 swig
