--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -84,7 +84,7 @@ confounding ,/adj./@令人困惑的;
 conjugation ,/n./@詞形變化;
 conjunction ,/n./@结合;,/n./@聯合;,/n./@連接;,/n./@同時發生;,/n./@連詞;,/n./@連接詞;,/n./[astrology]@相合;
 conjuration ,/n./@魔術;,/n./用魔法@召喚;,/n./@魔法;,/n./@施法;,/n./@咒語;,/n./@咒文;,/n./@符咒;,/n./@魔咒;
-connotation ,/n./@暗示;,/n./@含義;
+connotation ,/n./@暗示;,/n./@含義;,/n./@內涵;,/n./@言外之意;,/n./@隱含意義;,/n./@內涵意義;
 consecutive ,/adj./@连贯的;,/adj./@连续的;
 consequence ,/n./@结果;
 considerate ,/adj./@體貼的;,/adj./@體諒的;,/adj./@考慮周全的;
