--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -1031,6 +1031,7 @@ resource ,/n./@资源;
 response ,/n./@反应;,/n./@響應;
 restrain ,/v./@抑制;
 restrict ,/v./@限制;
+retarded ,/adj./@弱智的;,/adj./@智力遲鈍的;,/adj./@智障的;,/adj./@遲鈍的;
 retrieve ,/v./@找回;
 revenant ,/adj./@归来的;,/adj./@亡魂的;,/adj./@幽灵的;,/n./@亡魂;
 reversal ,/n./@颠倒;,/n./@逆转;,/n./@对调;,/n./@撤销;
