--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -44,6 +44,7 @@ bureaucracy ,/n./@官僚主義;
 Cabbalistic ,/redirected./@target="Kabbalistic";
 calculation ,/n./@计算;
 calibration ,/n./@校準;,/n./@測定;,/n./@標定;,/n./@刻度;
+cannibalize ,/vt./@拆取...的部件;,/vt./@食(同類)...的肉;,/vt./@減少...的銷量;,/vt./@調撥...的人員;
 carnivorous ,/adj./@食肉的;
 categorical ,/adj./@絕對的;,/adj./@明确的;,/adj./@斷言的;
 celebration ,/n./@庆祝;
