--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -12,7 +12,7 @@ aggregation ,/n./@集合;
 agriculture ,/n./@农业;
 altercation ,/n./@爭執;,/n./@鬥毆;,/n./@争吵;
 alternative ,/adj./@选择性的;,/adj./@替代性的;
-amphetamine ,/n./@安非他明;
+amphetamine ,/n./@安非他命;,/n./@安非他明;
 anachronism ,/n./@時代錯誤;,/n./@年代誤植;,/n./@不合時宜;,/n./@不合時代的產物;,/n./@不合時代的人;
 anaesthetic ,/n./@麻醉藥;,/n./@麻醉劑;,/adj./@麻醉的;
 analyzation ,/n./@分析;
@@ -129,6 +129,7 @@ destination ,/n./@目的地;,/n./@終點;
 destruction ,/n./@毁灭;,/n./@毁坏;
 destructive ,/adj./@破坏性的;,/adj./@毁灭性的;
 deteriorate ,/v./@惡化;,/v./@變壞;
+determinism ,/n./@決定論;
 detrimental ,/adj./@有害的;
 Deutschland ,/n./@德国;
 development ,/n./@发展;,/n./@开发;
@@ -360,6 +361,7 @@ prospective ,/adj./@未来的;
 protagonist ,/n./@主角;,/n./@主人公;,/n./@主要参与者;
 provisional ,/adj./@臨時的;
 provocative ,/adj./@挑衅的;,/adj./@煽动的;,/adj./@挑逗性的;,/adj./@撩人的;,/adj./@引起争议的;,/adj./@启发性的;
+psychedelic ,/adj./@幻覺的;,/adj./@有迷幻效果的;,/adj./@迷幻藥的;,/adj./@色彩炫目的;
 punctuation ,/n./@標點;,/n./@標點符號;
 qualitative ,/adj./@實質性的;,/adj./@質的;,/adj./@定性的;
 radiculitis ,/n./@脊神经根炎;,/n./@神经根炎;
