--- a/Files/lang/ch/chinese15.csv
+++ b/Files/lang/ch/chinese15.csv
@@ -9,6 +9,7 @@ electromagnetic ,/adj./@電磁的;,/adj./@電磁體的;
 experimentation ,/n./@试验;
 hypoproteinemia ,/n./@低蛋白血症;
 interchangeable ,/adj./@可交換的;,/adj./@可交替的;
+methamphetamine ,/n./@甲基苯丙胺;,/n./@脫氧麻黃鹼;,/n./@甲基安非他命;
 neuroplasticity ,/n./@神經可塑性;
 notwithstanding ,/adv./@尽管如此;,/adv./@即使这样;
 perspectiveness ,/n./@前瞻性;
