--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -750,6 +750,7 @@ merit ,/n./@優點;,/n./@功績;
 meson ,/n./@介子;
 metal ,/n./@金屬;,/adj./@金屬制的;
 meter ,/n./@量器;,/n./@儀表;
+meth- ,/pref./@甲基的;
 metre ,/n./@米;
 metro ,/n./@地鐵;,/adj./@大城市的;
 micra ,/redirected./@target="micron";
@@ -967,7 +968,7 @@ razor ,/n./@刮鬍刀;,/n./@剃刀;,/n./@剃鬚刀;
 reach ,/v./@到達;
 react ,/v./@反應;
 ready ,/adj./@准備好@的;
-realm ,/n./@領域;,/n./@王國;
+realm ,/n./@領域;,/n./@王國;,/n./@領土;,/n./@範圍;,/n./@疆域;,/n./@疆界;,/n./@國土;
 rebel ,/n./@反叛;
 rebut ,/v./@反駁;,/v./@駁囘;,/v./@揭露;,/n./@反駁;
 recur ,/v./@再發生;,/v./@復發;
@@ -1193,7 +1194,7 @@ steal ,/v./@偷;
 steam ,/n./@蒸汽;,/v./@蒸;
 steep ,/adj./@陡峭的;,/adj./@急劇的;,/vt./@浸泡;,/vt./@浸透;
 steer ,/v./@駕駛;,/v./@操舵;
-stern ,/n./@船尾;,/adj./@嚴厲的;,/adj./@堅決的;
+stern ,/n./@船尾;,/adj./@嚴厲的;,/adj./@堅決的;,/adj./@嚴格的;,/adj./@嚴峻的;,/adj./@苛刻的;,/adj./@堅定的;
 stick ,/v./@粘貼;,/n./@枝;,/v./@紥;
 stiff ,/adj./@拘謹的;,/adj./@僵硬的;,/adj./@剛強的;,/adj./@強烈的;,/adj./@生硬的;,/adj./@艱難的;,/adj./@拉緊的;
 still ,/adv./@一直;,/adv./@仍然;
