--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -725,7 +725,7 @@ hotdog ,/n./@熱狗;
 hubble ,/n./@小瘤;,/n./@小凸起;
 hubris ,/n./@傲慢;,/n./@驕傲;
 huddle ,/v./@蜷縮;
-humane ,/adj./@仁慈的;,/adj./@人道的;,/adj./@髙尚的;
+humane ,/adj./@仁慈的;,/adj./@人道的;,/adj./@髙尚的;,/adj./@人文的;,/adj./@有人情味的;
 humble ,/adj./@謙卑的;
 humour ,/n./@幽默;,/n./@詼諧;,/vt./@遷就;
 hunger ,/n./@饑餓;
@@ -754,7 +754,7 @@ infect ,/v./@感染;,/v./@傳染;
 infill ,/v./@填實;,/v./@填入;
 inform ,/v./@通知;
 ingest ,/vt./@吞嚥;,/vt./@吸收;,/vt./@攝取;
-inhale ,/v./@吸氣;
+inhale ,/v./@吸氣;,/vt./@吸入;
 inject ,/v./@註射;
 injure ,/vt./@損傷;,/v./@傷害;
 injury ,/n./@傷害;
@@ -811,6 +811,7 @@ laptop ,/n./@筆記本;
 larynx ,/n./@喉;
 lassie ,/n./@女孩;,/n./@少女;,/n./@年輕女子;
 lately ,/adj./@近來;
+latent ,/adj./@潛伏的;,/adj./@潛在的;,/adj./@隱性的;,/adj./@休眠的;
 latter ,/adj./@后面的;,/adj./@后者的;
 launch ,/v./@发射;,/v./@发起;
 lavish ,/adj./@浪費的;,/adj./@豐富的;,/adj./@大方的;,/v./@浪費;,/v./@濫用;,/v./@慷慨給予;
@@ -898,6 +899,7 @@ mental ,/adj./@精神的;,/adj./@心理的;,/adj./@智力的;,/adj./@內心的;,
 merely ,/adv./@僅;
 meteor ,/n./@流星;,/n./@大氣現象;
 method ,/n./@方法;
+methyl ,/n./@甲基;,/n./@木精;
 micron ,/n./@微米;,/n./@百萬分之一米;
 middle ,/adj./@中間的;
 midget ,/n./@矮子;,/n./@侏儒;
