--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -849,6 +849,7 @@ mention ,/v./@提及;
 mercury ,/n./@水星;,/n./@水銀;,/n./@汞;
 mermaid ,/n./@人魚;
 message ,/n./@信息;,/n./@音訊;
+methane ,/n./@甲烷;,/n./@沼氣;
 microbe ,/n./@微生物;,/n./@細菌;
 midwife ,/n./@助产士;
 migrant ,/n./@移居者;
@@ -1046,7 +1047,7 @@ portray ,/vt./@畫;,/vt./@描繪;,/vt./@描寫;,/vt./@扮演;,/vt./@描述;,/vt.
 possess ,/v./@擁有;,/v./@佔有;
 postage ,/n./@郵資;,/n./@郵費;
 postfix ,/n./@后綴;
-posture ,/n./@姿勢;
+posture ,/n./@姿勢;,/n./@姿態;,/n./@儀態;,/n./@情形;,/n./@態勢;,/n./@立場;,/n./@態度;
 pottery ,/n./@瓷器;
 poultry ,/n./@家禽;
 poverty ,/n./@貧窮;,/n./@缺乏;
