--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -760,6 +760,7 @@ merciful ,/adj./@仁慈的;
 merkabah ,/n./@梅爾卡巴;
 metaphor ,/n./@暗喻;,/n./@隱喻;,/n./@象徵;
 metatron ,/n./@梅塔特隆;
+methanol ,/n./@甲醇;
 midnight ,/n./@午夜;
 migraine ,/n./@偏頭痛;
 military ,/adj./@军事的;
@@ -1090,6 +1091,7 @@ seperate ,/v./@分散;
 septuple ,/adj./@七倍的;
 sequence ,/n./@序列;,/n./@順序;,/v./@排列;,/n./@系列;
 serenity ,/n./@晴朗;,/n./@安靜;
+severity ,/n./@嚴重;,/n./@劇烈;,/n./@嚴厲;,/n./@嚴格;,/n./@嚴肅;,/n./@樸素;,/n./@簡樸;,/n./@簡潔;,/n./@嚴謹;,/n./@嚴峻;,/n./@艱苦;,/n./@艱難;,/n./@嚴苛;,/n./@嚴酷;
 sextuple ,/adj./@六倍的;
 shopping ,/n./@購物;
 shortage ,/n./@不足;,/n./@缺少;
