--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -481,7 +481,7 @@ formation ,/n./@形成;,/n./@構造;
 fortitude ,/n./@剛毅;,/n./@堅毅;,/n./@不屈不撓;,/n./@堅忍;
 fortunate ,/adj./@幸運的;
 framework ,/n./@框架;,/n./@体系;
-franchise ,/n./@特權;,/n./@公民權;,/n./@經銷權;
+franchise ,/n./@特權;,/n./@公民權;,/n./@經銷權;,/n./@選舉權;
 fraternal ,/adj./@兄弟般的;,/adj./@兄弟的;
 freelance ,/n./@自由作家;,/n./@自由记者;
 freighter ,/n./@貨輪;,/n./@運輸機;,/n./@承運人;,/n./@發貨人;
@@ -687,6 +687,7 @@ mesmerize ,/v./@吸引;,/vt./@迷惑;,/vt./@迷住;,/vt./@催眠;
 messianic ,/adj./@彌賽亞的;,/adj./@救世主的;,/adj./@信奉救世主的;
 metabolic ,/adj./@变化的;,/adj./@新陈代谢的;
 meteorite ,/n./@隕石;
+methadone ,/n./@美沙酮;
 methodism ,/n./@衛理宗教義;,/n./@循道宗教義;
 methodist ,/n./@衛理公會教徒;,/n./@循道宗教徒;
 metrology ,/n./@度量衡學;,/n./@計量學;
