--- a/Files/lang/en/english11.csv
+++ b/Files/lang/en/english11.csv
@@ -129,6 +129,7 @@ destination
 destruction
 destructive
 deteriorate
+determinism
 detrimental
 Deutschland
 development
@@ -360,6 +361,7 @@ prospective
 protagonist
 provisional
 provocative
+psychedelic
 punctuation
 qualitative
 radiculitis
