--- a/Files/lang/en/english15.csv
+++ b/Files/lang/en/english15.csv
@@ -9,6 +9,7 @@ electromagnetic
 experimentation
 hypoproteinemia
 interchangeable
+methamphetamine
 neuroplasticity
 notwithstanding
 perspectiveness
