--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -811,6 +811,7 @@ laptop
 larynx
 lassie
 lately
+latent
 latter
 launch
 lavish
@@ -898,6 +899,7 @@ mental
 merely
 meteor
 method
+methyl
 micron
 middle
 midget
