--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -760,6 +760,7 @@ merciful
 merkabah
 metaphor
 metatron
+methanol
 midnight
 migraine
 military
@@ -1090,6 +1091,7 @@ seperate
 septuple
 sequence
 serenity
+severity
 sextuple
 shopping
 shortage
