--- a/Files/lang/ch/chinese14.csv
+++ b/Files/lang/ch/chinese14.csv
@@ -17,6 +17,7 @@ dysproteinosis ,/n./@蛋白質缺乏症;
 ecclesiastical ,/adj./@教會的;,/adj./@教士的;
 electrochromic ,/adj./@電致色變的;,/adj./@電致變色的;
 gentrification ,/n./@中产阶级化;
+hallucinogenic ,/adj./@引起幻覺的;,/adj./@迷幻藥的;
 hyperrealistic ,/adj./@超級寫實主義的;
 hypoallergenic ,/adj./@低過敏性的;,/adj./@低過敏原的;,/adj./@不易致過敏的;
 identification ,/n./@鉴定;
