--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -209,7 +209,7 @@ convenient ,/adj./@方便的;
 convention ,/n./@大會;,/n./@協定;,/n./@傳統;,/n./@慣例;,/n./@習俗;
 conversely ,/adj./@相反的;
 conversion ,/n./@轉換;
-conviction ,/n./@定罪;,/n./@确信;
+conviction ,/n./@定罪;,/n./@确信;,/n./@堅信;,/n./@深信;,/n./@判罪;,/n./@判刑;,/n./@堅定的信念;,/n./@堅定的信仰;
 convincing ,/adj./@有说服力的;
 convulsion ,/n./@抽搐;,/n./@驚厥;,/n./@痉挛;,/n./@狂笑;,/n./@動亂;
 coordinate ,/v./@协调;,/v./@配合;,/n./@坐标;,/adj./@并列的;,/adj./@同等的;
@@ -223,6 +223,7 @@ counteract ,/v./@抵消;,/v./@抵抗;,/v./@中和;,/v./@阻礙;
 courageous ,/adj./@勇敢的;
 credential ,/n./@證書;,/n./@憑據;,/n./@國書;
 cross-talk ,/n./@相声;
+crosspiece ,/n./@橫木;,/n./@橫桿;,/n./@橫檔;,/n./@橫樑;,/n./@橫撐;
 crustacean ,/n./@甲殼綱動物;,/adj./@甲殼綱的;
 curriculum ,/n./@課程;
 deactivate ,/v./@停用;,/v./@遣散;
@@ -757,6 +758,7 @@ transition ,/n./@转变;,/n./@過渡;
 transitive ,/adj./@及物的;,/adj./@过渡的;,/n./@传递;,/n./@及物动词;
 translucid ,/adj./@半透明的;
 transplant ,/v./@移植;
+traumatize ,/vt./@損傷;,/vt./@使受精神創傷;
 tremendous ,/adj./@极大的;,/adj./@极好的;
 triviality ,/n./@瑣事;,/n./@瑣碎;
 tumultuous ,/adj./@混乱的;,/adj./@骚乱的;,/adj./@嘈杂的;,/adj./@吵闹的;,/adj./@喧哗的;
