--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -36,7 +36,7 @@ awry ,/adj./@歪的;,/adj./@错的;
 axis ,/n./@軸;,/n./@轴线;,/n./@轴心;
 baby ,/n./@寳貝;,/n./@嬰兒;
 back ,/adv./@回;,/n./@后面;,/n./@背部;,/adv./@向后地;,/v./@支持;
-bail ,/n.//vt./@保釋;
+bail ,/n.//vt./@保釋;,/n./@保釋金;,/vt./@往外舀;,/vi./@往外舀水;,/n./@橫木;
 bait ,/n./@誘餌;,/v./@引誘;
 bake ,/v./@烘焙;
 bald ,/adj./@秃的;,/adj./@光秃的;,/adj./@单调的;,/adj./@磨光的;
@@ -629,6 +629,7 @@ menu ,/n./@菜單;
 mere ,/adj./@僅僅;
 mesh ,/n./@網眼;,/v./@嚙合;
 mess ,/n./@混亂;
+meth ,/redirected./@target="methamphetamine";,/redirected./@target="methadone";,/redirected./@target="meths";
 mice ,/n./@老鼠;
 mild ,/adj./@溫柔的;
 mile ,/n./@英里;
