--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -192,6 +192,7 @@ bounce ,/v./@彈起;,/n./@跳躍;
 bovine ,/adj./@牛的;,/adj./@愚笨的;
 branch ,/n./@分支;
 brandy ,/n./@白蘭地酒;
+brazen ,/adj./@厚顏無恥的;,/adj./@黃銅製的;,/adj./@黃銅色的;,/adj./@刺耳的;
 breach ,/n./@違反;,/n./@違背;,/n./@缺口;,/vt./@違反;,/vt./@破壞;,/vt./@打破;
 breast ,/n./@乳房;,/n./@胸部;
 breath ,/v./@呼吸;
@@ -482,6 +483,7 @@ editor ,/n./@編輯;,/n./@編者;
 efface ,/v./@擦掉;,/v./@抹去;
 effect ,/n./@影響;,/n./@效果;,/n./@作用;
 effigy ,/n./@肖像;,/n./@雕像;,/n./@模擬像;
+effing ,/adj./@該死的;,/adv./@該死的;
 effuse ,/v./@流出;,/v./@湧出;,/v./@瀉出;
 egoism ,/n./@利己主義;
 elapse ,/v./@消逝;
