--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -291,6 +291,7 @@ creation ,/n./@創造;
 creative ,/adj./@创造性的;
 creature ,/n./@生物;
 credence ,/n./@可信性;,/n./@相信;,/n./@祭器臺;
+crescent ,/n./@新月形;,/n./@新月;,/n./@新月狀物;,/n./@新月形街道;,/adj./@新月形的;,/adj./@逐漸增長的;
 criminal ,/n./@罪犯;
 criteria ,/n./@標準;,/n./@條件;
 critical ,/adj./@批评的;,/adj./@批判的;
@@ -499,6 +500,7 @@ feasible ,/adj./@可行的;,/adj./@可實行的;,/adj./@可能的;
 February ,/n./@二月;
 feedback ,/n./@反饋;
 feminine ,/adj./@女性的;,/adj./@陰性的;,/adj./@婦女的;
+fentanyl ,/n./@芬太尼;
 ferocity ,/n./@兇猛;,/n./@殘暴;
 festival ,/n./@节日;
 fidelity ,/n./@忠誠;
