--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -411,6 +411,8 @@ enumerate ,/v./@列舉;,/v./@枚舉;
 enunciate ,/v./@明確表達;
 eparchial ,/adj./@主教管區的;
 ephemeral ,/adj./@短暫的;,/adj./@朝生暮死的;
+epicenter ,/n./@震央;,/n./@中心;,/n./@爆炸點;,/n./@震中;
+epicentre ,/redirected./@target="epicenter";
 epidermis ,/n./@表皮;,/n./@外皮;
 equipment ,/n./@裝備;,/n./@設備;,/n./@器材;,/n./@裝置;
 eradicate ,/v./@根除;
@@ -474,6 +476,7 @@ flippancy ,/n./@轻率;,/n./@轻率无礼;
 fluctuate ,/v./@波動;,/v./@起伏;
 following ,/adj./@下列的;
 footprint ,/n./@足迹;,/n./@脚印;,/n./@印记;
+footstool ,/n./@腳凳;
 forbidden ,/adj./@被禁止的;
 foreclose ,/v./@沒收;,/v./@阻止;,/v./@排除;
 formality ,/n./@礼节;
@@ -646,6 +649,7 @@ leitmotif ,/n./@主題;,/n./@主旨;,/n./@主旋律;,/n./@基調;
 lethargic ,/adj./@瞌睡的;,/adj./@昏昏欲睡的;,/adj./@倦怠的;,/adj./@無精打采的;,/adj./@嗜睡的;
 leukaemia ,/n./@白血病;
 liability ,/n./@責任;
+lifeblood ,/n./@命脈;,/n./@生命必需的血液;,/n./@生命線;
 lifestyle ,/n./@生活方式;
 lightning ,/n./@閃電;
 limitless ,/adj./@无限度的;
@@ -842,6 +846,7 @@ principal ,/n./@校長;,/adj./@主要的;,/adj./@首要的;,/adj./@主角;,/adj.
 principle ,/n./@原理;
 privilege ,/n./@特權;
 proactive ,/adj./@前瞻性的;
+probation ,/n./@緩刑;,/n./@試用;,/n./@試用期;,/n./@見習;,/n./@見習期;,/n./@試讀;,/n./@試讀期;
 procedure ,/n./程序;,/n./@步骤;
 processor ,/n./@處理器;
 profanity ,/n./@褻瀆;,/n./@不敬;
