--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -223,6 +223,7 @@ counteract
 courageous
 credential
 cross-talk
+crosspiece
 crustacean
 curriculum
 deactivate
@@ -757,6 +758,7 @@ transition
 transitive
 translucid
 transplant
+traumatize
 tremendous
 triviality
 tumultuous
