--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -192,6 +192,7 @@ bounce
 bovine
 branch
 brandy
+brazen
 breach
 breast
 breath
@@ -482,6 +483,7 @@ editor
 efface
 effect
 effigy
+effing
 effuse
 egoism
 elapse
