--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -261,6 +261,7 @@ clobber
 closure
 cluster
 clutter
+cocaine
 cockade
 cockney
 cockpit
@@ -345,9 +346,11 @@ coupler
 courage
 courier
 cramped
+crampon
 cranium
 crapper
 crevice
+cricket
 crimson
 cripple
 crooked
@@ -822,6 +825,7 @@ Luddite
 lumiere
 lunatic
 macaque
+machete
 machine
 madness
 magenta
