--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -291,6 +291,7 @@ creation
 creative
 creature
 credence
+crescent
 criminal
 criteria
 critical
@@ -499,6 +500,7 @@ feasible
 February
 feedback
 feminine
+fentanyl
 ferocity
 festival
 fidelity
