--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -411,6 +411,8 @@ enumerate
 enunciate
 eparchial
 ephemeral
+epicenter
+epicentre
 epidermis
 equipment
 eradicate
@@ -474,6 +476,7 @@ flippancy
 fluctuate
 following
 footprint
+footstool
 forbidden
 foreclose
 formality
@@ -646,6 +649,7 @@ leitmotif
 lethargic
 leukaemia
 liability
+lifeblood
 lifestyle
 lightning
 limitless
@@ -842,6 +846,7 @@ principal
 principle
 privilege
 proactive
+probation
 procedure
 processor
 profanity
